--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -84,8 +84,8 @@
     width: 33%;
 }
 
-/* Booking Page */
-.booking-buttons-container {
+/* Planner Page */
+.planner-buttons-container {
     display: flex;
     flex-direction: column;
     height: 60%;
@@ -95,7 +95,14 @@
     vertical-align: top;
 }
 
-.flight-details-table {
+.line-details-table {
     margin-bottom: 5px;
+}
+
+.image-fit {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
